validator注册自定义类型的验证器
